Thu Oct  9 11:43:16 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * MPC/config/dcps_inforepodiscovery.mpb:
        * dds/DCPS/InfoRepoDiscovery/InfoRepoDiscovery.mpc:
        * dds/monitor/monitor.mpc:

          Move the TAO Portable Server library dependency to the Info Repo
          and other libraries as this is the way some VC++ builds need it.

Wed Oct  8 15:41:58 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * MPC/config/dcps.mpb:
        * MPC/config/dcps_inforepodiscovery.mpb:

          Move dependency on the TAO Portable Server library from the dcps
          project to the dcps_inforepodiscovery project.  OpenDDS applications
          not using InfoRepo discovery are not CORBA servers and do not
          require the TAO Portable Server library.

Tue Oct  7 20:56:13 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>

        * tests/DCPS/Footprint:
        * tests/DCPS/Footprint/Args.h:
        * tests/DCPS/Footprint/DataReaderListener.h:
        * tests/DCPS/Footprint/DataReaderListener.cpp:
        * tests/DCPS/Footprint/Footprint.mpc:
        * tests/DCPS/Footprint/Messenger.idl:
        * tests/DCPS/Footprint/Messenger_export.h:
        * tests/DCPS/Footprint/Writer.h:
        * tests/DCPS/Footprint/Writer.cpp:
        * tests/DCPS/Footprint/pub.ini:
        * tests/DCPS/Footprint/rtps.ini:
        * tests/DCPS/Footprint/rtpspublisher.cpp:
        * tests/DCPS/Footprint/rtpssubscriber.cpp:
        * tests/DCPS/Footprint/run_test.pl:
        * tests/DCPS/Footprint/sub.ini:
        * tests/DCPS/Footprint/tcppublisher.cpp:
        * tests/DCPS/Footprint/tcpsubscriber.cpp:

          Add footprint publishers and subscribers for both RTPS and
          InfoRepo/tcp.

Tue Oct  7 17:49:08 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>

        * performance-tests/DCPS/SimpleLatency/sample_pub.cpp:
        * performance-tests/DCPS/SimpleLatency/sample_sub.cpp:
        * tests/DCPS/Compiler/idl_test1_main/main.cpp: