@@ -1,3 +1,9 @@
+Thu Oct  9 14:48:51 UTC 2014  Jeff Schmitz  <schmitzj@ociweb.com>
+
+        * dds/DCPS/transport/multicast/ReliableSession.cpp:
+
+          Consistent and clearer logging regarding resends and naks.
+
 Thu Oct  9 11:43:16 UTC 2014  Paul Calabrese  <calabrese_p@ociweb.com>
 
         * MPC/config/dcps_inforepodiscovery.mpb:
